# template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  bootstrap.py  environment.yml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
